[gd_scene load_steps=7 format=2]

[ext_resource path="res://Typewriter Text/textFunctions/Node2D.gd" type="Script" id=1]
[ext_resource path="res://Typewriter Text/text/Standard.tres" type="DynamicFont" id=2]
[ext_resource path="res://Typewriter Text/textFunctions/Choices.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "blank",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "blank",
"speed": 5.0
} ]

[node name="Stage" type="Node2D"]
material = SubResource( 1 )
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 5.29236
margin_right = 955.0
margin_bottom = 123.292
custom_fonts/mono_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 16.0
margin_top = 128.0
margin_right = 56.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="SoundTimer" type="Timer" parent="."]
one_shot = true

[node name="TextWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="characters" type="Node2D" parent="."]

[node name="char1" type="AnimatedSprite" parent="characters"]
position = Vector2( 80, 332 )
frames = SubResource( 2 )
animation = "blank"

[node name="char1Anim" type="AnimationPlayer" parent="characters/char1"]

[node name="char2" type="AnimatedSprite" parent="characters"]
position = Vector2( 880, 332 )
frames = SubResource( 3 )
animation = "blank"

[node name="char2Anim" type="AnimationPlayer" parent="characters/char2"]

[node name="Choices" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Options" type="Node2D" parent="Choices"]

[connection signal="choices" from="." to="Choices" method="_on_Stage_choices"]
[connection signal="meta_clicked" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="timeout" from="SoundTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TextWaitTimer" to="." method="_on_TextWaitTimer_timeout"]
